# sxzslz-django

./: Dockerfile  db.sqlite3  manage.py  pyproject.toml  requirements.txt
news/: __init__.py  admin.py  apps.py  models.py  station.py  urls.py  views.py
news/migrations/: 0001_initial.py  0002_alter_article_title_alter_user_user_name.py  0003_article_read.py  0004_alter_article_options_alter_subset_options_and_more.py  0005_alter_article_options_alter_subset_options_and_more.py
news/templates/news/: detail.html  home.html  home_page.html  list.html  news_detail.html  news_list.html  station_detail.html
news/templates/news/common/: footer.html  header.html  layout.html
static/css/: style.css  view.css
sxzslz/: asgi.py  settings.py  urls.py  wsgi.py
