[project]
name = "sxzslz-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "cryptography>=45.0.5",
    "django>=5.2.4",
    "django-simpleui>=2025.6.24",
    "gunicorn>=23.0.0",
    "pydantic>=2.11.7",
    "pymysql>=1.1.1",
]
